tests/ui/const-generics/ogca/basic-fail.stderr
error[E0308]: mismatched types
  --> $DIR/basic-fail.rs:19:30
   |
LL | const ARR: [(); ADD1::<0>] = [(); INC::<0>];
   |                              ^^^^^^^^^^^^^^ expected an array with a size of const { N + 1 }, found one with a size of const { N + 1 }

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
